# grocery-shopper

./: .gitignore  Makefile  README.md  archive_contents.py  defaults.ini  main.py  pyproject.toml  recipe.py  requirements.txt  select_recipes.py  start.py  syntax_completion.sh  yaml2pdf.py
grocery_shopper/: Makefile  archive_contents.py  build_ingredients.py  compile_recipe.sh  handle_ing_miss_url.py  ingredient.py  main.py  make_table.py  parse_edited_list.py  read_csv.py  read_default_values.py  recipe.py  retrieve_required_ingredients.py  select_recipes.py  setup_dirs.py  start.py  template.tex  vars.py  yaml2pdf.py
tests/: Testgericht_0.yaml  Testgericht_1.yaml  archive_contents_test.py  build_ingredients_test.py  conftest.py  handle_ing_muss_url_test.py  ingredient_category_url_test.csv  recipe_build_ingredients.yaml  shopping_list_test.txt  test_GroceryShopper.py  test_grocery_shopper.py  test_handle_ing_miss_url.py  test_setup_dirs.py
