[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery_shopper"
version = "0.0.17"
# dependencies = [
#     'PyYAML'
# ]
authors = [
    { name = "PFeO", email="125358469+PhilippFeO@users.noreply.github.com"}
]
description = "Let the computer choose your dishes and also shop the ingredients – automagically!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/PhilippFeO/grocery-shopper"
Issues = "https://github.com/PhilippFeO/grocery-shopper/issues"

[tool.setuptools.packages.find]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "grocery_shopper.egg-info",
    "hooks",
]

[project.scripts]
grocery_shopper = "grocery_shopper.start:start"
